force-app/main/default/objects/WelcomeCal_Schedule__c/WelcomeCal_Schedule__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For Setting Welcome Call Schedule ( Welcome Call )</description>
    <label>Schedule</label>
</CustomObject>