force-app/main/default/objects/WelcomeCal_Schedule__c/fields/End_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Hour__c</fullName>
    <description>Using Time As End Hour</description>
    <label>End Hour</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>