force-app/main/default/objects/WelcomeCal_Schedule__c/fields/FgWeekend__c.field-meta.xml
<CustomField>
    <fullName>FgWeekend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if allow schedule at weekend</description>
    <label>FgWeekend</label>
    <type>Checkbox</type>
</CustomField>