force-app/main/default/objects/WelcomeCal_Schedule__c/fields/Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Hour__c</fullName>
    <description>Using time as Start Hour</description>
    <label>Start Hour</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>