force-app/main/default/objects/WelcomeCal_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Hour__c</columns>
    <columns>End_Hour__c</columns>
    <columns>FgWeekend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>